# YumeCard

./: .clang-format  .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  MULTI_ARCH_README.md  MULTI_ARCH_STATUS.md  README.md  build.bat  build.ps1  build.sh  package-lock.json  vcpkg.json
.github/workflows/: cmake-build.yml  release.yml
Style/: index.html  rendered.html  screenshot.js  yumecard.css
cmake/toolchains/: linux-arm64.cmake  macos-universal.cmake  windows-arm64.cmake
config/: build_config.json  config.json
core/: main.cpp
data/: favicon.ico.placeholder  template.html
data/backgrounds/: README.md
docs/: PERFORMANCE_OPTIMIZATION.md
include/: github_api.hpp  github_subscriber.hpp  head.hpp  platform_utils.hpp  read_config.hpp  screenshot.hpp  set_config.hpp  system_info.hpp  version.hpp.in
scripts/: build_multi_arch.bat  build_multi_arch.sh  check_multi_arch.bat  check_multi_arch.sh  install_dependencies.bat  install_dependencies.sh  setup_linux_cross_compile.sh  setup_wsl_cross_compile.bat  test_complete_build.bat  test_linux_cross_compile.sh
src/: main.cpp  version.cpp
src/go/: go.mod  main.go  version.go
type/: index.html
